see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


07-Dec-2010 Mark Dexter
# [#22957] Upgrading a template that uses method="upgrade" removes manually added files
# [#22682] Users without edit state can change date on screen via the calendar
# [#23366] Remove special treatment for Konqueror with regard to minified javascript (Rouven Weßling)

07-Dec-2010 Jean-Marie Simonet
 [#23666] Attempting to log in with a non-existent account get's "Username and password do not match" message. Thanks Matt and Bill.

07-Dec-2010 Christophe Demko
 + Adding an index.html file
 # [#23663] Some modules does not load the jmodel class before using it
 # [#23639] JFormValidator and disabled Elements (Reinhard Hiebl)
 # [#23654] Com_categories don't save the params when a section is specified (Jonnathan S. Lima)

06-Dec-2010 Christophe Demko
 # [#23660] The menu system does not use attributes in metadata.xml files
 # [#23227] JArrayHelper::fromObject doesnt work if the object contain an array of objects

06-Dec-2010 Jean-Marie Simonet
 # [#23288] instances of ® should be html encoded. Thanks Bill.
 #$ Normalizing/implementing Submit/Save success strings/code for articles/weblinks in front-end
 # [#23651] Save failed with the following error: Another article from this category has the same alias. Thanks Mark.
 # [#23034] Article title tag is using menu title instead of article title. Thanks Mark.
 # [#23622] Hathor clean up of CSS and parameters, plus file reduction. Thanks Andrea.

05-Dec-2010 Jean-Marie Simonet
 # [#23604] Can't load twice the same loadposition on same page. Thanks Christophe.

05-Dec-2010 Christophe Demko